--- a/9879HW05_Spring2019.ipynb
+++ b/9879HW05_Spring2019.ipynb
@@ -172,7 +172,10 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "Cov(\\tilde S, y_i) =& \\frac{\\phi\\sigma^2}{2\\lambda}\\\\\n",
+    "Cov(\\tilde S, y_i) =& Cov\\left(\\tilde S, \\frac{\\phi}{2\\lambda}(x-\\mu)\\right)\\\\\n",
+    "=& Cov\\left(\\tilde S, \\frac{\\phi}{2\\lambda}(\\tilde S + \\epsilon -\\mu)\\right)\\\\\n",
+    "=& \\frac{\\phi}{2\\lambda}Var(\\tilde S)\\\\\n",
+    "=& \\frac{\\phi\\sigma^2}{2\\lambda}\\\\\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
@@ -228,7 +231,7 @@
     "(a) Assuming that $\\mathcal I$ can detect how much piggyback order flow there is, deduce that the equilibrium Kyle lambda is unchanged from the original case where there are no piggyback orders.\n",
     "\n",
     "---\n",
-    "The market maker, $\\mathcal M$, only sees the total aggregated demand $y$ so it will not change its pricing strategy unless it also notices the piggyback orders. As long as $\\mathcal I$ adjusts its strategy to account for these piggyback orders on its own, the equilibrium Kyle lambda will not change. \n",
+    "The market maker, $\\mathcal M$, only sees the total aggregated demand $y$ so it will not change its pricing strategy since it does not notice the piggyback orders. As long as $\\mathcal I$ adjusts its strategy to account for these piggyback orders on its own, the equilibrium Kyle lambda will not change. \n",
     "\n",
     "---\n",
     "\n",
@@ -236,9 +239,53 @@
     "\n",
     "---\n",
     "\n",
-    "The strategy for the informed trader be \n",
-    "The optimal demand for the informed trader becomes\n",
+    "The total demand is now $y = y_u + y_i(1+\\gamma)$ so the market maker $\\mathcal{M}$ will set price\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "p =& \\mu + \\lambda y\\\\\n",
+    "=& \\mu + \\lambda (y_u + y_i(1+\\gamma))  \n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "The expected profit of $\\mathcal{I}$ becomes:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\pi =& \\mathbb{E}[y_i(\\tilde S - p)|\\tilde S]\\\\\n",
+    "=& \\mathbb{E}[y_i(\\tilde S - \\mu - \\lambda(y_i(1+\\gamma)+y_u))|\\tilde S]\\\\\n",
+    "=& y_i(\\tilde S - \\mu - \\lambda y_i(1+\\gamma))\\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Maximizing the above, the first-order condition establishes the optimal demand for the informed trader:\n",
     "$$y_i = \\frac{\\tilde S - \\mu}{2(1+\\gamma)\\lambda}$$\n",
+    "\n",
+    "Now, the perception of $\\mathcal{M}$  about the informed trader's flow aggregates the piggyback orders so the pricing strategy from its perspective is $$y_i = (a+b\\tilde S)(1+\\gamma)$$ \n",
+    "\n",
+    "To compute the conditional probability $\\mathbb{E}[\\tilde S | y]$ we need:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "Var(y_i) =& Var\\left(\\frac{\\tilde S - \\mu}{2(1+\\gamma)\\lambda}\\right)\\\\\n",
+    "=& \\frac{\\sigma^2}{4(1+\\gamma)^2\\lambda^2}\\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "Cov(\\tilde S, y) =& Cov\\left(\\tilde S, y_u + \\frac{\\tilde S - \\mu}{2(1+\\gamma)\\lambda} \\right)\\\\\n",
+    "=& Cov\\left(\\tilde S, \\frac{1}{2(1+\\gamma)\\lambda}\\tilde S \\right)\\\\\n",
+    "=& \\frac{1}{2(1+\\gamma)\\lambda}Var(\\tilde S)\\\\\n",
+    "=& \\frac{\\sigma^2}{2(1+\\gamma)\\lambda}\\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Therefore, \n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}[\\tilde S | y] =& \\mathbb{E} [\\tilde S]+\\frac{Cov(\\tilde S,y)}{Var(y)}\\left(y-\\mathbb{E} [y]\\right)\\\\ \n",
+    "=& \\mu +\\frac{\\frac{\\sigma^2}{2(1+\\gamma)\\lambda}}{\\sigma_u^2 + \\frac{\\sigma^2}{4(1+\\gamma)^2\\lambda^2}}y\\\\ \n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -246,7 +293,7 @@
     "\n",
     "---\n",
     "\n",
-    "\n",
+    "Given that $\\gamma > 0$, the expected profits and the trade capacity are reduced in the equations provided as the result of part (b). Basically, the informed trader needs to reduce its own variables to account for the actions of the broker impacting the market maker's flow as if the broker's orders were its own.\n",
     "\n",
     "---"
    ]
